# antigravity-zero-template

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  mission.md  plan.md
.agent/workflows/: brainstorm.md  compare.md  context.md  draft.md  pipeline.md  simplify.md  spec.md  verify.md
.antigravity/: architect.md  personas.md  rules.md
.antigravity/docs/: START_ARCHITECT.md  headless.md
.antigravity/rules/: smart-mcp.md
.antigravity/skills/: context-engineering.md  phase-switching.md  task-hierarchy.md
.antigravity/workflows/: setup_project.md
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-links.yml
artifacts/: activeContext.md  productContext.md  projectBrief.md  systemPatterns.md  task.md  techContext.md
changelog/: changelog.md
docs/: mcp-setup.md
examples/: README.md
examples/api-service/: mission.md
examples/python-cli/: mission.md  pyproject.toml
examples/web-app/: mission.md
scripts/: setup.ps1  setup.sh  verify.ps1  verify.sh
templates/: spec-example-like-button.md  spec-template.md
