# Пример pyproject.toml для Python-проекта с шаблоном Antigravity
# Скопируйте в корень проекта и адаптируйте под свои нужды

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Описание вашего проекта"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["your", "keywords"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Основные зависимости
    # "requests>=2.28.0",
    # "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
# CLI команды
# your-cli = "your_package.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/YOUR_REPO"
Documentation = "https://github.com/YOUR_USERNAME/YOUR_REPO#readme"
Repository = "https://github.com/YOUR_USERNAME/YOUR_REPO"
Issues = "https://github.com/YOUR_USERNAME/YOUR_REPO/issues"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
